kubernetes/deploy/proxies/internal/radarr/endpoint.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: radarr
subsets:
  - addresses:
      - ip: 192.168.3.40
    ports:
      - port: 7878
        name: http
