kubernetes/deploy/proxies/internal/radarr/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-internal
  name: radarr
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`radarr.vandeneede.org`)
    services:
    - name: radarr
      port: 7878
